# pet_project/openapi/openapi.yaml
@@ -100,6 +100,103 @@ paths:
       responses:
         '204':
           description: Task deleted successfully
+  /users:
+      get:
+        summary: Get all users
+        tags:
+          - users
+        responses:
+          '200':
+            description: A list of users
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/User'
+      post:
+        summary: Create a new user
+        tags:
+          - users
+        requestBody:
+          description: The user to create
+          required: true
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        responses:
+          '201':
+            description: The created user
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/User'
+  /users/{id}:
+    patch:
+      summary: Update a user
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The user to update
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - id
+              properties:
+                id:
+                  type: integer
+                  format: uint
+                email:
+                  type: string
+                  nullable: true
+                password:
+                  type: string
+                  nullable: true
+      responses:
+        '200':
+          description: The updated user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    delete:
+      summary: Delete a user
+      tags:
+        - users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        description: The user to delete
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - id
+              properties:
+                id:
+                  type: integer
+                  format: uint
+      responses:
+        '204':
+          description: User deleted successfully
               
 components:
   schemas:
@@ -108,8 +205,18 @@ components:
       properties:
         id:
           type: integer
-          format: uint # так как в БД айди это только положительные числа.
+          format: uint
         task:
           type: string
         is_done:
           type: boolean
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
+          type: string
